<resources>
    <string name="app_name" translatable="false">Pogodynka</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="new_location">New location</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="add">Add</string>
    <string name="fill_fields">Fill all fields</string>
    <string name="cannot_do_this">Cannot do this operation</string>
    <string name="delete">Delete</string>
    <string name="edit_location">Edit location</string>
    <string name="edit">Edit</string>
    <string name="weather_downloading">Weather downloading</string>
    <string name="gps_searching">GPS searching</string>
    <string name="please_wait">Please wait</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="direction">Direction</string>
    <string name="locale">en</string>
    <string name="favourite">Favourite</string>
    <string name="about">About</string>
    <string name="weather">Weather</string>
    <string name="version">Version</string>
    <string name="last_update">Last update</string>
    <string name="author">Author</string>
    <string name="app_description">Pogodynka app is used for getting current weather conditions. You can use GPS location or saved locations in database which you can manage. Shake to refresh! Enjoy!</string>
    <string name="author_sign">Maciej Owerczuk</string>
    <string name="right_reserved">All right reserved.</string>
</resources>
