<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/newLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/new_location"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/newCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/city"/>

    <EditText
        android:id="@+id/newCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/country"/>

    <Button
        android:id="@+id/addNewLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

</LinearLayout>