<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mowerczuk.pogodynkanew.AboutActivity">

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_description"/>

    <TableLayout
        android:id="@+id/authorTable"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appDescription">
        <TableRow>
            <TextView
                android:id="@+id/authorLab"
                style="@style/aboutLabels"
                android:text="@string/author" />

            <TextView
                android:id="@+id/author"
                style="@style/aboutData"
                android:text="@string/author_sign"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/versionLab"
                style="@style/aboutLabels"
                android:text="@string/version"/>

            <TextView
                android:id="@+id/version"
                style="@style/aboutData"
                android:text="1.1.3"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/dateLab"
                style="@style/aboutLabels"
                android:text="@string/last_update" />

            <TextView
                android:id="@+id/date"
                style="@style/aboutData"
                android:text="26.01.2017"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/rightsReserved"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authorTable"/>
</RelativeLayout>
