<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mowerczuk.pogodynkanew.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <LinearLayout
        android:id="@+id/visualInfo"
        style="@style/containerCenter">
        <ImageView
            android:id="@+id/condIcon"
            style="@style/weatherIcon" />

        <TextView
            android:id="@+id/temp"
            style="@style/weatherTemperature"/>
    </LinearLayout>

    <TextView
        android:id="@+id/cityText"
        style="@style/weatherTitle"
        android:layout_below="@id/visualInfo" />

    <TextView
        android:id="@+id/condMain"
        style="@style/weatherShort"
        android:layout_below="@id/cityText" />

    <TextView
        android:id="@+id/condDescr"
        style="@style/weatherDescription"
        android:layout_below="@id/condMain" />


    <TableLayout
        style="@style/containerCenter"
        android:layout_below="@id/condDescr">
        <TableRow>
            <TextView
                android:id="@+id/pressLab"
                style="@style/weatherLabels"
                android:text="@string/pressure"/>

            <TextView
                android:id="@+id/press"
                style="@style/weatherData"/>
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/humLab"
                style="@style/weatherLabels"
                android:text="@string/humidity" />

            <TextView
                android:id="@+id/hum"
                style="@style/weatherData"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/windLab"
                style="@style/weatherLabels"
                android:text="@string/wind" />

            <TextView
                android:id="@+id/windSpeed"
                style="@style/weatherData" />
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/degLab"
                style="@style/weatherLabels"
                android:text="@string/direction" />

            <TextView
                android:id="@+id/windDeg"
                style="@style/weatherData"/>
        </TableRow>
    </TableLayout>



</RelativeLayout>
